--- a/package.json
+++ b/package.json
@@ -12,26 +12,33 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@inquirer/prompts": "^3.3.0",
-    "@types/jest": "^29.5.10",
-    "@types/node": "^20.10.1",
-    "@typescript-eslint/eslint-plugin": "^6.13.1",
-    "@typescript-eslint/parser": "^6.13.1",
-    "eslint": "^8.54.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
+    "@inquirer/prompts": "^3.3.2",
+    "@jest/types": "^29.6.3",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^20.17.9",
+    "@typescript-eslint/eslint-plugin": "^8.17.0",
+    "@typescript-eslint/parser": "^8.17.0",
+    "eslint": "^9.16.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.7.0",
     "minimist": "^1.2.8",
-    "prettier": "^3.1.0",
-    "ts-jest": "^29.1.1",
-    "tsx": "^4.6.1",
-    "typescript": "^5.3.2"
+    "prettier": "^3.4.1",
+    "ts-jest": "^29.2.5",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.2"
   },
   "dependencies": {
-    "@alexaegis/advent-of-code-lib": "^1.0.0",
+    "@alexaegis/advent-of-code-lib": "^1.0.1",
     "cli-progress": "^3.12.0",
     "kolorist": "^1.8.0",
     "lodash": "^4.17.21",
-    "piscina": "^4.2.0"
+    "piscina": "^4.7.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "glob": "^9.0.0",
+      "inflight": "^2.0.0"
+    }
   }
 }
